--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,36 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Environment variables
 .env
-dist
-build
-.DS_Store
+.env.local
+.env.*.local
+
+# Build outputs
+dist/
+build/
+
+# Database
+*.db
+*.db-journal
+dev.db
+
+# Logs
 *.log
-.vscode
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Prisma
+/generated/prisma
